deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relay
  labels:
    name: relay
    pod-security.kubernetes.io/enforce: baseline
